updated css for devices

--- a/index.html
+++ b/index.html
@@ -43,58 +43,62 @@
         <div class="password-checks">
           <!--Password validation errors -->
           <span id="password-length-error" style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> 8 character minimum</span
+            ><i class="fa-solid fa-circle-xmark"></i> &nbsp; 8 character
+            minimum</span
           >
           <span id="password-lowercase-error" style="display: none; color: red">
-            <i class="fa-solid fa-circle-xmark"></i> atleast one lowercase
+            <i class="fa-solid fa-circle-xmark"></i>&nbsp; atleast one lowercase
             character</span
           >
           <span id="password-uppercase-error" style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> atleast one uppercase
-            letter</span
+            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; atleast one
+            uppercase letter</span
           >
           <span
             id="password-specialchar-error"
             style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> atleast one special
+            ><i class="fa-solid fa-circle-xmark"></i> &nbsp; atleast one special
             character</span
           >
           <span id="password-number-error" style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> atleast one number</span
+            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; atleast one
+            number</span
           >
           <span id="password-match-error" style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> Passwords do not
+            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; Passwords do not
             match</span
           >
 
           <!--Password validation success -->
           <span id="password-length-success" style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> 8 character minimum</span
+            ><i class="fa-solid fa-circle-check"></i> &nbsp; 8 character
+            minimum</span
           >
           <span
             id="password-lowercase-success"
             style="display: none; color: green"
           >
-            <i class="fa-solid fa-circle-check"></i> atleast one lowercase
+            <i class="fa-solid fa-circle-check"></i>&nbsp; atleast one lowercase
             character</span
           >
           <span
             id="password-uppercase-success"
             style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> atleast one uppercase
-            letter</span
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; atleast one
+            uppercase letter</span
           >
           <span
             id="password-specialchar-success"
             style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> atleast one special
+            ><i class="fa-solid fa-circle-check"></i> &nbsp; atleast one special
             character</span
           >
           <span id="password-number-success" style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> atleast one number</span
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; atleast one
+            number</span
           >
           <span id="password-match-success" style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> Passwords match
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; Passwords match
           </span>
         </div>
 
