added required in input fields and updated regex

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             id="new-password"
             name="password"
             placeholder="Enter password"
+            required
           />
         </div>
 
@@ -36,6 +37,7 @@
             id="confirm-password"
             name="confirm-password"
             placeholder="Enter password"
+            required
           />
         </div>
 
@@ -43,7 +45,7 @@
         <div class="password-checks">
           <!--Password validation errors -->
           <span id="password-length-error" style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> &nbsp; 8 character
+            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; 8 character
             minimum</span
           >
           <span id="password-lowercase-error" style="display: none; color: red">
@@ -57,7 +59,7 @@
           <span
             id="password-specialchar-error"
             style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i> &nbsp; atleast one special
+            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; atleast one special
             character</span
           >
           <span id="password-number-error" style="display: none; color: red"
@@ -71,7 +73,7 @@
 
           <!--Password validation success -->
           <span id="password-length-success" style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> &nbsp; 8 character
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; 8 character
             minimum</span
           >
           <span
@@ -90,7 +92,7 @@
           <span
             id="password-specialchar-success"
             style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i> &nbsp; atleast one special
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; atleast one special
             character</span
           >
           <span id="password-number-success" style="display: none; color: green"
