updated css for focus styling and updated content for success messages in html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             number</span
           >
           <span id="password-match-error" style="display: none; color: red"
-            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; Passwords do not
+            ><i class="fa-solid fa-circle-xmark"></i>&nbsp; Passwords does not
             match</span
           >
 
@@ -80,24 +80,23 @@
             id="password-lowercase-success"
             style="display: none; color: green"
           >
-            <i class="fa-solid fa-circle-check"></i>&nbsp; atleast one lowercase
+            <i class="fa-solid fa-circle-check"></i>&nbsp; one lowercase
             character</span
           >
           <span
             id="password-uppercase-success"
             style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i>&nbsp; atleast one
-            uppercase letter</span
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; one uppercase
+            letter</span
           >
           <span
             id="password-specialchar-success"
             style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i>&nbsp; atleast one special
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; one special
             character</span
           >
           <span id="password-number-success" style="display: none; color: green"
-            ><i class="fa-solid fa-circle-check"></i>&nbsp; atleast one
-            number</span
+            ><i class="fa-solid fa-circle-check"></i>&nbsp; one number</span
           >
           <span id="password-match-success" style="display: none; color: green"
             ><i class="fa-solid fa-circle-check"></i>&nbsp; Passwords match
