--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
         <!-- Submit Button -->
         <button class="reset-password-btn" type="submit">Reset password</button>
+
+        <!-- <div class="showPassword"></div> -->
       </form>
     </div>
 
